# Software-Engineering-Sprint5

./: .gitignore  CMakeLists.txt  README.md  references.json  references.txt
CODE_COVERAGE/: index-sort-f.html  index-sort-l.html  index.html
Pencil-Producer/: CMakeCache.txt  CMakeLists.txt  Doxyfile  Makefile  apm2000_inventory.cpp  apm2000_inventory.h  cmake_install.cmake  doxygen_front_page.dox  graphite_inventory.h  main.cpp  material_inventory.cpp  material_inventory.h  pencil_inventory.cpp  pencil_inventory.h  pencilproducer  pencilproducer.cpp  pencilproducer.h  pencilproducer.ui  scoreboard.cpp  scoreboard.h  scoreboard.ui  sprint_5.pro  wallet.cpp  wallet.h  welcomescreen.cpp  welcomescreen.h  welcomescreen.ui  welcomescreen.ui.autosave  wood_inventory.h
Test/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.user.2b23035.4.8-pre1  CTestTestfile.cmake  cmake_install.cmake  testpencils  tst_test.cpp
doc/: Doxyfile  annotated.html  apm2000__inventory_8h_source.html  classAPM2000__Inventory-members.html  classAPM2000__Inventory.html  classGraphite__Inventory-members.html  classGraphite__Inventory.html  classMainWindow-members.html  classMainWindow.html  classMaterial__Inventory-members.html  classMaterial__Inventory.html  classPencilProducer-members.html  classPencilProducer.html  classPencil__Inventory-members.html  classPencil__Inventory.html  classScoreboard-members.html  classScoreboard.html  classWallet-members.html  classWallet.html  classWood__Inventory-members.html  classWood__Inventory.html  classes.html  files.html  functions.html  functions_func.html  (+12 more)
(+223 files in other folders)
